   modify the resouce files (Resource.rc and resource.h) without mangling them.   

Changes in detail
-----------------
Added CAXWindow
Added CWebBrowser
Added CWnd::CharToWide
Added CWnd::WideToChar
Added CWnd::TCharToWide
Added CWnd::WideToTChar
Added CWnd::CharToTChar
Added CWnd::TCharToChar
Added CWnd::GetClassName
Added CWnd::GetDlgItemText
Added CWnd::GetWindowText
Added CWnd::GetWindowType
Removed CharToTString
Removed TCharToString
Removed TCharToWide
Removed CWnd::GetWindowString
Removed CWnd::GetClassString
Removed CWnd::GetDlgItemString
Removed CWnd::IsContainer
Removed CWnd::IsDocker
Removed CWnd::IsFrame
Removed CWnd::IsMenubar
Removed CWnd::IsMDIChild
Removed CWnd::IsMDIFrame
Removed CWnd::IsRebar
Removed CWnd::IsStatusbar
Removed CWnd::IsTab
Removed CWnd::IsTabbedMDI
Removed CWnd::IsToolbar
Renamed CContainer to CDockContainer

Modified Browser Sample
Added Tray demo


Incompatibilities with previous versions
----------------------------------------
* CContainer has been renamed to CDockContainer
* The global string functions CharToTString, TCharToString and TCharToWide have
   been replaced with CWnd::CharToWide, CWnd::WideToChar, CWnd::TCharToWide,
   CWnd::WideToTChar, CWnd::CharToTChar and CWnd::TCharToChar.


Version 6.8
===========

New Features
------------
* Support has been added for the Windows Ribbon Framework available on 
   Windows 7 operating systems. The RibbonFrame and RibbonSimple samples 
   demonstrates how to implelement the ribbon. RibbonFrame reverts back to 
   using the traditional Toolbar and Menubar if the operating system doesn't
   support the ribbon framework.
   
* Helper classes have been added for the standard controls, namely the Button,
   Edit, Listbox, and Static controls.
   
* Dockers can now be hidden and unhidden. Refer to the Splitter sample for a
   demonstration of this feature.
   
* Modal dialogs now support pretranslated messages.          


Changes
-------
Added CButton class
Added CEdit class